--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My test page</title>
   </head>
 
+  <body>
 # Test page
 
 ## Header 2
@@ -39,6 +40,6 @@ This is a test pdf
 
 <embed src="/assets/1508.07346.pdf" type="application/pdf" />
 
-
+</body>
 
 </html>
