--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 
   <body>
 
+<main>
+<div></div>
+<div></div>
+<div>
+  <embed src="/assets/1508.07346.pdf" type="application/pdf"
+  alt="Arxiv article 1508.07346, 'Bounding Eigenvalues with Packing Density'" />
+</div>
 
-    
-<embed src="/assets/1508.07346.pdf" type="application/pdf" />
-
+</main>
 </body>
 
 </html>
