--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link href="styles/style.css" rel="stylesheet" />
     <title>My test page</title>
   </head>
 
