--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link href="styles/style.css" rel="stylesheet" />
+    <link href="_layouts/styles.css" rel="stylesheet" />
     <title>My test page</title>
   </head>
 
   <body>
 
 <main>
-<div></div>
-<div></div>
+<div>1234</div>
+<div><li>
+  <a href="https://www.google.com">Google</a>
+</li></div>
 <div>
   <embed src="/assets/1508.07346.pdf" type="application/pdf"
   alt="Arxiv article 1508.07346, 'Bounding Eigenvalues with Packing Density'" />
