--- a/index.html
+++ b/index.html
@@ -1,25 +1,9 @@
-<html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link href="_layouts/style.css" rel="stylesheet" />
-    <title>My test page</title>
-  </head>
+# Test
 
-  <body>
 
-<main>
-<div class="nav">
-  This should be a sidebar when wide and a header when narrow
-</div>
-
-<div>
-  This is the main body of the page
-  <embed src="/assets/1508.07346.pdf" type="application/pdf"
-  alt="Arxiv article 1508.07346, 'Bounding Eigenvalues with Packing Density'" />
-</div>
-
-</main>
-</body>
-
-</html>
+```
+<embed src="/assets/1508.07346.pdf" 
+  type="application/pdf" 
+  alt="Arxiv article 1508.07346, 
+  'Bounding Eigenvalues with Packing Density'" />
+```
