update including math

--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
       <div class="nav"><ul>
         <li><a href="/about.html">About</a></li>
         <li><a href="/math.html">Math</a></li>
-        <li><a href="/reading.html">Reading</a></li>
+        <li><a href="/reading.html">Reading & Reviews</a></li>
         <li><a href="/projects.html">Projects</a></li>
         <li><a href="/index.html">Home</a></li>
       </ul></div>
       <section id="main_content" class="inner">
-        {{ content }}
+        <h1>Welcome!</h1>
+        <p>Here, I keep track of some interesting thoughts I've had.</p>
       </section>
     </div>
 
