--- a/dodge_the_planets/index.html
+++ b/dodge_the_planets/index.html
@@ -11,4 +11,4 @@
 
 <script src="index.js" type="module"></script>
 
-<a href="/index.html">Return home</a>
+<p><a href="/index.html">Return home</a></p>
