--- a/dodge_the_planets/index.html
+++ b/dodge_the_planets/index.html
@@ -8,6 +8,8 @@
     <input type="submit" id="reset_button"></input>
 </form>
 
+<p>Return <a href="/index.html">home</a></p>
+
 <canvas id="main_pane" width="800" height="800" style="border:1px solid #000000;"></canvas>
 <canvas id="fuel_pane" width="10" height="800" style="border:1px solid #000000;"></canvas>
 
